--- a/src/SpaceInvaders/SpaceInvaders.csproj
+++ b/src/SpaceInvaders/SpaceInvaders.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="LiteDB" Version="5.0.16" />
+    <PackageReference Include="NAudio" Version="2.1.0" />
   </ItemGroup>
   
 </Project>
