--- a/src/SpaceInvaders/SpaceInvaders.csproj
+++ b/src/SpaceInvaders/SpaceInvaders.csproj
@@ -14,5 +14,9 @@
     <PackageReference Include="LiteDB" Version="5.0.16" />
     <PackageReference Include="NAudio" Version="2.1.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Scenes\Result\" />
+  </ItemGroup>
   
 </Project>
